<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/homepage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="128dp"
        android:width="314dp"
        android:height="128.5dp"
        android:fontFamily="@font/chewy"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/forrest"
        android:textColor="#ffffffff"
        android:textSize="95sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="315dp"
        android:layout_height="37dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="292dp"
        android:width="314dp"
        android:height="128.5dp"
        android:fontFamily="@font/chewy"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/homeDescription"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="82dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="504dp"
        android:background="#00000804"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:fontFamily="@font/bree_serif"
        android:lineSpacingMultiplier="0.38"
        android:onClick="sendToLandingPage"
        android:text="@string/facebookLogin"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="63dp"
        android:layout_height="62dp"
        android:layout_marginTop="512dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>